# parser_benchmarks

./: .gitignore  Cargo.toml  README.md
attoparsec/: mp4.cabal
attoparsec/src/: Main.hs
hammer/: Makefile  main.c
haskell-cereal/: .gitignore  LICENSE  mp4.cabal
haskell-cereal/src/: Main.hs
http/: README.md
http/attoparsec/: .gitignore  http.cabal  package.yaml  stack.yaml
http/attoparsec/src/: Main.hs
http/chomp-http/: Cargo.toml
http/chomp-http/src/: main.rs
http/combine-http/: Cargo.toml
http/combine-http/src/: main.rs
http/combine-optimized/: Cargo.toml  combine-3.0.0-beta.1.bench
http/httparse/: Cargo.toml
http/httparse/src/: main.rs
http/joyent_http_parser/: main.c
http/manual-c/: Makefile  http_parser.c  http_parser.h  main.c
http/nom-http/: Cargo.toml
http/nom-http/src/: main.rs
http/nom-optimized/: Cargo.toml  README.md
http/nom-optimized/src/: combinators.rs  main.rs
http/picohttpparser/: Cargo.toml
http/picohttpparser/src/: main.rs
json/: README.md  test.json
json/combine/: Cargo.toml
json/combine/src/: main.rs
json/nom/: Cargo.toml
json/nom-str/: Cargo.toml
json/nom-str/src/: combinators.rs  main.rs
json/nom/src/: main.rs
json/peg/: Cargo.toml  build.rs
json/peg/src/: json.rustpeg  main.rs
json/pest/: Cargo.toml
json/pom-char/: Cargo.toml
json/serde/: Cargo.toml
json/serde-bytes/: Cargo.toml
mp4/: Cargo.toml  README.md
mp4/attoparsec/: LICENSE  mp4.cabal  stack.yaml
mp4/chomp/: Cargo.toml
mp4/hammer/: Makefile
mp4/nom-mp4/: Cargo.toml
mp4/src/: main.rs
src/: main.rs
(+7 files in other folders)
